--- a/README
+++ b/README
@@ -8,6 +8,9 @@
 # hcc
 https://en.wikipedia.org/wiki/Homebrew_Computer_Club
 
+# gurun meditation
+https://en.wikipedia.org/wiki/Guru_Meditation
+
 # plem
 https://nl.wikipedia.org/wiki/Provinciale_Limburgse_Elektriciteits-Maatschappij
 
