--- a/README
+++ b/README
@@ -12,7 +12,7 @@ https://nl.wikipedia.org/wiki/Provinciale_Limburgse_Elektriciteits-Maatschappij
 # test drive
 https://en.wikipedia.org/wiki/Test_Drive_(1987_video_game)
 
-# gurun meditation
+# guru meditation
 https://en.wikipedia.org/wiki/Guru_Meditation
 
 # randwijck
